# llllllllllllllll

./: Cargo.toml  build.rs  icon.rc
.github/workflows/: build.yml
src/: config.rs  main.rs
src/requests/: all_game_data_response.rs  mod.rs
src/routes/: live_client_data.rs  mod.rs
src/utils/: cors.rs  mod.rs  requests.rs
