[package]
name = "llllllllllllllll"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.139"
lazy_static = "1.4.0"
tray-item = "0.7.0"

[build-dependencies]
windres = "*"
