[package]
name = "llllllllllllllll"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.139"
tokio = { version = "1", features = ["full"] }
tray-item = "0.7.0"

[build-dependencies]
embed-resource = "1.7.3"
